test/fail/integration/_fail_grammar_let_stmts_3.hs
main = do
       let x; x = 3
       print "hello"